assets/css/style.css
body{
    background-color: whitesmoke;
}

h1, h2 {
    text-align: center;
}
#p1Zone {
    background-color: #dc3545;
    padding: 1em;
}

#p2Zone {
    background-color: #007bff;
    padding: 1em;
}

.btnContainer {
    text-align: center;
}

.playBtn {
    background-color: #28a745;
    border-radius: 4px;
    border: none;
    padding: .25em .75em .25em .75em;
    color: white;
}

button:active {
    background-color: #abadaf;
}

.joinBtn{
    background-color: whitesmoke;
    border-radius: 4px;
    border: none;
    padding: .25em .75em .25em .75em;
    display: inline-block;
    color: black;
    
}

#resetBtn{
    background-color: orange;
    border-radius: 4px;
    border: none;
    padding: .25em .75em .25em .75em;
    display: inline-block;
}

#submitBtn {
    color: black;
    background-color: whitesmoke;
}

.messageDiv {
    background-color: #abadaf;
}

.resetContainer {
    text-align: center;
}

.form-inline {
    display: block;
    margin-top: 1.5em;
}

#chatBox{
    background-color: whitesmoke;
    border-radius: 4px;
    padding: .5em;
    height: 150px;
    width: 300px;
}

